docs: improve project README